second draft Goofle Project

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<div>
 				<!-- Search Bar -->
 				<form class="search-bar">
-					<input type="text">
+					<input class="search-bar-text" type="text">
 				</form>
 			</div>
 			<div>
